# k-pdf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  K-PDF_PROJECT_INTAKE.md  LICENSE  PRODUCT_MANIFESTO.md  PROJECT_BIBLE.md  README.md  Solo_Orchestrator_Builders_Guide_v4_0.md  Solo_Orchestrator_CLI_Setup_Addendum_v1_0.md  Solo_Orchestrator_CLI_Setup_Addendum_v1_1.md  pyproject.toml
.claude/: manifest.json  settings.json
.claude/framework/hooks/: _helpers.sh  branch-safety.sh  changelog-sync-check.sh  enforce-evaluate.sh  enforce-superpowers.sh  marker-guard.sh  pre-commit-checks.sh  scalability-check.sh  session-start.sh  skill-tracker.sh  stop-checklist.sh  sync-tracker.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_DECISION.md  DATA_CONTRACT.md  DATA_MODEL.md  FUNCTIONAL_REQUIREMENTS.md  RISK_MITIGATION_MATRIX.md  UI_SCAFFOLDING.md  USER_JOURNEY_MAP.md
docs/superpowers/plans/: 2026-04-02-feature1-open-render-pdf.md  2026-04-02-feature10-merge-pdfs.md  2026-04-02-feature11-dark-mode.md  2026-04-02-feature12-annotation-summary.md  2026-04-02-feature2-multi-tab.md  2026-04-02-feature3-page-navigation.md  2026-04-02-feature4-text-search.md  2026-04-02-feature5-zoom-rotate.md  2026-04-02-feature6-text-markup-annotations.md  2026-04-02-feature7-sticky-notes-textbox.md  2026-04-02-feature8-form-filling-save.md  2026-04-02-feature9-page-management.md  2026-04-02-implicit-printing.md  2026-04-02-keyboard-shortcuts-dialog.md  2026-04-02-text-copy.md  2026-04-02-undo-redo.md  2026-04-06-form-creation.md  2026-04-06-text-editing.md
docs/superpowers/specs/: 2026-04-02-feature1-open-render-pdf-design.md  2026-04-02-feature10-merge-pdfs-design.md  2026-04-02-feature11-dark-mode-design.md  2026-04-02-feature12-annotation-summary-design.md  2026-04-02-feature2-multi-tab-design.md  2026-04-02-feature3-page-navigation-design.md  2026-04-02-feature4-text-search-design.md  2026-04-02-feature5-zoom-rotate-design.md  2026-04-02-feature6-text-markup-annotations-design.md  2026-04-02-feature7-sticky-notes-textbox-design.md  2026-04-02-feature8-form-filling-save-design.md  2026-04-02-feature9-page-management-design.md  2026-04-02-implicit-printing-design.md  (+4 more)
k_pdf/: __init__.py  app.py  main.py
k_pdf/core/: annotation_model.py  document_model.py  event_bus.py  feature_gate.py  form_model.py  logging.py  outline_model.py  page_cache.py  page_model.py  preferences_manager.py  search_model.py  text_edit_model.py  theme_manager.py  thumbnail_cache.py  undo_manager.py  zoom_model.py
k_pdf/persistence/: migrations.py  recent_files.py  settings_db.py
k_pdf/presenters/: annotation_presenter.py  annotation_summary_presenter.py  document_presenter.py  form_creation_presenter.py  form_presenter.py  navigation_presenter.py  page_management_presenter.py  search_presenter.py  tab_manager.py  text_edit_presenter.py
k_pdf/services/: annotation_engine.py  form_engine.py  merge_engine.py  outline_service.py  page_engine.py  pdf_engine.py  pdf_errors.py  print_service.py  search_engine.py  text_edit_engine.py
k_pdf/views/: annotation_panel.py  annotation_toolbar.py  find_replace_bar.py  form_field_popup.py  form_properties_panel.py  keyboard_shortcuts_dialog.py  main_window.py  merge_dialog.py  navigation_panel.py  note_editor.py  page_manager_panel.py  pdf_viewport.py  preferences_dialog.py  search_bar.py  tab_bar.py  zoom_toolbar.py
tests/: conftest.py  test_annotation_engine.py  test_annotation_integration.py  test_annotation_model.py  test_annotation_presenter.py  test_annotation_summary_integration.py  test_annotation_summary_panel.py  test_annotation_summary_presenter.py  test_annotation_toolbar.py  test_blocking_bug_regressions.py  test_dark_mode_integration.py  test_document_model.py  test_document_presenter.py  test_document_presenter_zoom.py  test_find_replace_bar.py  test_form_creation_integration.py  test_form_creation_presenter.py  test_form_creation_wiring.py  test_form_engine.py  test_form_field_popup.py  test_form_filling_integration.py  test_form_model.py  test_form_presenter.py  test_form_properties_panel.py  test_help_menu.py  test_keyboard_shortcuts_dialog.py  test_merge_dialog.py  test_merge_engine.py  test_merge_integration.py  test_migrations.py  test_navigation_integration.py  test_navigation_panel.py  test_navigation_presenter.py  test_note_editor.py  test_outline_model.py  test_outline_service.py  test_page_cache.py  test_page_engine.py  test_page_management_integration.py  test_page_management_presenter.py  (+35 more)
tests/benchmarks/: test_performance.py
(+5 files in other folders)
