[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k-pdf"
version = "0.1.0"
description = "Free, offline, cross-platform PDF reader and editor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymupdf==1.27.2.2",
    "pyside6==6.11.0",
]

[project.scripts]
k-pdf = "k_pdf.main:main"

[dependency-groups]
dev = [
    "mypy==1.20.0",
    "nuitka==4.0.7",
    "pip-audit==2.10.0",
    "pip-licenses==5.5.5",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-qt==4.5.0",
    "ruff==0.15.8",
]

# --- Tool Configuration ---

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "D100",  # missing docstring in public module (placeholder modules)
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108", "D101", "D102", "D103"]
"tests/benchmarks/**/*.py" = ["S101", "S106", "S108", "D101", "D102", "D103", "T201"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*", "pymupdf", "pymupdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["k_pdf.services.pdf_engine"]
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = ["k_pdf.services.search_engine"]
disable_error_code = ["misc", "no-untyped-call", "untyped-decorator"]

[[tool.mypy.overrides]]
module = ["k_pdf.services.annotation_engine"]
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = ["k_pdf.services.form_engine"]
disable_error_code = ["no-untyped-call", "attr-defined"]

[[tool.mypy.overrides]]
module = ["k_pdf.services.page_engine"]
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = ["k_pdf.services.merge_engine"]
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = ["k_pdf.core.event_bus", "k_pdf.core.theme_manager", "k_pdf.core.preferences_manager", "k_pdf.views.pdf_viewport", "k_pdf.views.main_window", "k_pdf.views.navigation_panel", "k_pdf.views.search_bar", "k_pdf.views.zoom_toolbar", "k_pdf.views.annotation_toolbar", "k_pdf.views.note_editor", "k_pdf.views.page_manager_panel", "k_pdf.views.merge_dialog", "k_pdf.views.annotation_panel", "k_pdf.views.keyboard_shortcuts_dialog", "k_pdf.views.preferences_dialog"]
disable_error_code = ["misc", "no-any-return", "unused-ignore"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.document_presenter"]
disable_error_code = ["misc", "untyped-decorator"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.tab_manager"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.navigation_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.search_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.annotation_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.form_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.page_management_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.presenters.annotation_summary_presenter"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["k_pdf.core.thumbnail_cache"]
disable_error_code = ["misc", "untyped-decorator", "unused-ignore"]

[[tool.mypy.overrides]]
module = ["k_pdf.core.undo_manager"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["PySide6", "PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
qt_api = "pyside6"
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[tool.coverage.run]
source = ["k_pdf"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 65
show_missing = true
